# devrel-swarm

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt  run_100_leads.py  run_sales_pipeline.py
.github/workflows/: ci.yml  release.yml
agents/: __init__.py  atlas.py  dex.py  echo.py  iris.py  kai.py  llm.py  mox.py  nova.py  pax.py  rex.py  sage.py  sentinel.py  types.py  vox.py  watchdog.py
agents/video/: __init__.py  assembler.py  script_parser.py  tts_engine.py
config/: agent_config.yaml  env.example
deliverables/: architecture-overview.md  community-triage.md  feedback-synthesis.md  growth-experiment.md  portfolio-summary.md  tutorial.md
docs/: README.md  cookbook.md  quickstart.md  setup-google-oauth.md  troubleshooting.md
docs/agents/: argus.md
docs/cli/: analytics.md
docs/superpowers/plans/: 2026-03-13-p0-wire-agent-execute-methods.md  2026-03-14-vox-video-agent.md  2026-03-17-agent-improvements.md  2026-03-17-instantly-ai-integration.md  2026-03-17-sales-marketing-agents.md  2026-03-18-apollo-io-integration.md  2026-04-17-devrel-swarm-v0-alpha.md  2026-04-18-devrel-swarm-v0-agentic-alpha.md  2026-04-29-devrel-swarm-cli-phase1-restructure.md  2026-04-29-devrel-swarm-cli-phase2-project-bootstrap.md  2026-04-29-devrel-swarm-cli-phase3-quality-pipeline.md  2026-04-29-devrel-swarm-cli-phase4-full-surface.md  2026-04-29-devrel-swarm-cli-phase5-migration-docs.md  2026-05-01-devrel-swarm-cli-phase6-bug-sweep.md  2026-05-01-devrel-swarm-cli-phase7-wave2-correctness.md  2026-05-01-devrel-swarm-cli-phase8-wave3-polish.md  2026-05-02-argus-analytics-agent.md  2026-05-03-landing-page.md  2026-05-05-growth-wave0-foundation.md  2026-05-05-growth-wave1-cyra-cro.md  2026-05-05-growth-wave2-vega-geo.md  2026-05-05-growth-wave3-selene-seo.md  2026-05-05-growth-wave4-polish-release.md
docs/superpowers/specs/: 2026-03-17-instantly-ai-integration-design.md  2026-03-17-sales-marketing-agents-design.md  2026-03-18-apollo-io-integration-design.md  2026-03-19-lead-search-personalized-outreach-design.md  2026-04-17-devrel-swarm-product-design.md  2026-04-29-devrel-swarm-cli-design.md  2026-05-02-argus-analytics-agent-design.md  2026-05-03-landing-page-design.md  2026-05-05-growth-pipeline-design.md
examples/: README.md  run_100_leads.py  run_sales_pipeline.py
knowledge_base/channels/: messaging.md  overview.md  voice.md
knowledge_base/developers/: api.md  contributing.md  plugins.md
knowledge_base/features/: agents.md  automation.md  canvas.md  models.md  skills.md
knowledge_base/platform/: architecture.md  privacy.md  self-hosting.md
landing/: index.html
optimize/: agent_eval.py  email_prompt.txt  eval_harness.py  optimization_history.json  optimize_all.py  run_optimizer.py  system_prompt.txt  test_cases.json
optimize/agents/dex/: optimization_history.json  system_prompt.txt  test_cases.json
optimize/agents/echo/: optimization_history.json  system_prompt.txt  test_cases.json
optimize/agents/iris/: optimization_history.json  system_prompt.txt  test_cases.json
optimize/agents/kai/: optimization_history.json  system_prompt.txt  test_cases.json
optimize/agents/mox/: optimization_history.json  system_prompt.txt  test_cases.json
optimize/agents/nova/: system_prompt.txt  test_cases.json
optimize/agents/rex/: optimization_history.json  system_prompt.txt  test_cases.json
optimize/agents/sage/: optimization_history.json  system_prompt.txt  test_cases.json
optimize/agents/vox/: optimization_history.json  system_prompt.txt  test_cases.json
optimize/argus/: system_prompt.txt
scripts/: check_landing.py
src/devrel_origin/: __init__.py
src/devrel_origin/cli/: __init__.py  _common.py  analytics.py  argus.py  auth.py  config.py  content.py  cost.py  cro.py  deliverables.py  docs.py  doctor.py  experiment.py  growth.py  init.py  intel.py  kb.py  listen.py  marketing.py  migrate.py  run.py  sales.py  schedule.py  synthesize.py  triage.py  video.py
src/devrel_origin/core/: __init__.py  agent_config.py  argus.py  atlas.py  base.py  cyra.py  dex.py  echo.py  iris.py  kai.py  llm.py  llm_backends.py  mox.py  nova.py  pax.py  rex.py  sage.py  (+3 more)
src/devrel_swarm/: __init__.py
tests/: conftest.py  test_agent_edge_cases.py  test_analytics_collectors.py  test_api_client.py  test_apollo_client.py  test_argus.py  test_atlas.py  test_atlas_replies.py  test_base_agent.py  test_budget.py  test_code_validator.py  test_config.py  test_cyra.py  test_dex.py  test_echo.py  test_github_tools.py  test_http_bridge.py  test_instantly_client.py  test_integration.py  test_iris.py  test_kai.py  test_llm.py  test_llm_backends.py  test_llm_cost_sink.py  test_llm_cost_tracking.py  test_mcp_server.py  test_mox.py  test_mox_instantly.py  test_nova.py  test_pax.py  test_pax_apollo.py  test_pax_instantly.py  test_rex.py  test_rex_apollo.py  test_sage.py  test_search_tools.py  test_sentinel.py  test_storage.py  test_vox.py
tests/cli/: test_analytics_alias.py  test_analytics_command.py  test_auth_command.py  test_common_helpers.py  test_content_command.py  test_cro_command.py  test_devrel_verbs.py  test_doctor_command.py  test_growth_command.py  test_init_command.py  test_kb_verbs.py  test_marketing_verbs.py  test_migrate_command.py  test_niche_verbs.py  test_run_command.py  test_sales_verbs.py  test_schedule_verbs.py  test_utility_verbs.py
tests/core/: test_llm_cost_sink.py  test_load_agent_prompt.py  test_video_lazy_imports.py
tests/fixtures/: apollo_sample_responses.json  sample_llm_responses.json
tests/project/: test_config.py  test_cost_sink.py  test_init.py  test_paths.py  test_state.py  test_state_analytics.py  test_state_v5_migration.py
tests/quality/: test_editorial.py  test_integration.py  test_persona.py  test_readability.py  test_slop.py  test_style.py  test_voice.py
tools/: __init__.py  apollo_client.py  http_bridge.py  instantly_client.py  mcp_server.py  notifications.py  run_report.py  scheduler.py  search_tools.py  self_improve.py  storage.py
workers/: budget.py  pyproject.toml
(+122 files in other folders)
