[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devrel-origin"
version = "0.2.16"
description = "A 15-agent CLI that runs DevRel, sales, and marketing on your repo. BYO Anthropic or OpenRouter key."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Daria Dovzhikova", email = "dovzhikova@gmail.com"}
]
keywords = [
    "devrel",
    "developer-advocacy",
    "ai-agents",
    "anthropic",
    "claude",
    "marketing-automation",
    "content-pipeline",
    "competitive-intelligence",
    "cli",
    "pipx",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Software Development :: Documentation",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Office/Business",
    "Typing :: Typed",
]

dependencies = [
    "httpx>=0.25.0",
    "anthropic>=0.28.0",
    "pyyaml>=6.0",
    "scipy>=1.13.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.0",
    "PyGithub>=2.1.1",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "tomli-w>=1.0.0",
    # Pin urllib3 above the v2.6.x CVE pair (CVE-2026-44431, CVE-2026-44432).
    # Otherwise pulled transitively via httpx/PyGithub at the vulnerable range.
    "urllib3>=2.7.0",
]

[project.optional-dependencies]
# Video tutorial generation (Vox agent). Adds ~150MB Playwright browsers
# (after `playwright install`), pyobjc-core on macOS, and pulls openai for
# TTS narration. Install with `pip install 'devrel-origin[video]'` or
# `pipx install 'devrel-origin[video]'`.
video = [
    "openai>=1.50.0",
    "playwright>=1.49.0",
    "pyautogui>=0.9.54",
]

# SEO auditor (Selene). Pulls Google API client + OAuth flow + HTML parser.
# Install with `pip install 'devrel-origin[seo]'` (or `[growth]` for the full pipeline).
seo = [
    "google-api-python-client>=2.150.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",
    "beautifulsoup4>=4.12.0",
]

# Optional 5th GEO engine (Google AI Overviews via SerpAPI). Off by default;
# enable in config.toml `[geo].include_google_ai_overviews = true`.
geo-google = [
    "google-search-results>=2.4.2",
]

# Convenience: full Growth pipeline (Selene + Vega + Cyra). GEO + CRO have
# zero new deps; their AI clients reuse existing openai/anthropic/httpx.
growth = [
    "devrel-origin[seo]",
]

dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "respx>=0.20.2",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "build>=1.0.0",
    "twine>=5.0.0",
    # dev installs always pull video + growth deps so tests can exercise the full pipeline
    "devrel-origin[video,growth]",
]

[project.urls]
Homepage = "https://github.com/dovzhikova/devrel-origin"
Repository = "https://github.com/dovzhikova/devrel-origin"
Issues = "https://github.com/dovzhikova/devrel-origin/issues"
Changelog = "https://github.com/dovzhikova/devrel-origin/blob/main/CHANGELOG.md"
Documentation = "https://github.com/dovzhikova/devrel-origin/tree/main/docs"

[project.scripts]
devrel = "devrel_origin.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
include = ["devrel_origin*"]

[tool.setuptools.package-data]
"devrel_origin.project.templates" = ["*.toml", "*.md", "*.gitignore"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-v --cov=devrel_origin --cov-report=term-missing"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "asyncio: marks tests as async (deselect with '-m \"not asyncio\"')",
]

[tool.coverage.run]
branch = true
source = ["devrel_origin"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
# Current baseline ~76%; sheets.py + scheduler.py have zero/low coverage.
# Threshold set 1pp below current to keep CI green while preventing regressions.
fail_under = 75

[tool.ruff]
line-length = 100
target-version = "py312"
# examples/ and optimize/ are scripts run with `python <file>`, not part of
# the published package — they intentionally use sys.path tricks (E402) and
# long top-level main() functions (C901) that don't apply to library code.
extend-exclude = ["examples", "optimize", "landing"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "C",    # flake8-comprehensions
    "B",    # flake8-bugbear
]
ignore = [
    "E501",  # line too long (handled by ruff format)
    "C901",  # function too complex — accepted in this codebase
    "B008",  # function call in default arg — common in CLI definitions (typer)
]

[tool.ruff.lint.per-file-ignores]
# Tests use long fixtures, occasional unused locals for self-documenting names,
# semicolon-compact mock setup, and import patterns that don't apply to
# library code.
"tests/**" = ["F841", "E741", "B007", "E702", "E402"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
ignore_missing_imports = true
